#3 expand listing
